# GoogleKit

./: .gitignore  AGENT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: authentication.md  calendar.md  docs.md  drive.md  errors.md  index.md  installation.md  publishing.md  scopes.md  sheets.md  slides.md
examples/auth/: adc.py  oauth_desktop.py  service_account.py
examples/calendar/: create_event.py  freebusy.py  recurring_event.py
examples/docs/: create_document.py  replace_template.py
examples/drive/: search_files.py  share_file.py  upload_download.py
examples/sheets/: append_rows.py  format_sheet.py  read_write.py
examples/slides/: create_presentation.py  replace_template.py
src/googlekit/: __init__.py  __main__.py  client.py
src/googlekit/auth/: __init__.py  adc.py  credentials.py  oauth.py  scopes.py  service_account.py  token_store.py
src/googlekit/core/: __init__.py  configuration.py  constants.py  exceptions.py  optional.py  pagination.py  protocols.py  retries.py  service_apis.py  transport.py  types.py  validation.py
src/googlekit/gcalendar/: __init__.py  _datetime.py  _payload.py  calendars.py  client.py  events.py  freebusy.py  models.py
src/googlekit/gdocs/: __init__.py  _drive_bridge.py  client.py  content.py  documents.py  images.py  models.py  tables.py  utf16.py
src/googlekit/gdrive/: __init__.py  changes.py  client.py  export_formats.py  file_media.py  files.py  folders.py  models.py  permissions.py  shortcuts.py  transfers.py
src/googlekit/gsheets/: __init__.py  _layout.py  _requests.py  client.py  formatting.py  models.py  spreadsheets.py  values.py  worksheets.py
src/googlekit/gslides/: __init__.py  client.py  elements.py  images.py  models.py  pages.py  presentations.py  tables.py  text.py
tests/: conftest.py
tests/integration/gcalendar/: test_calendar_integration.py
tests/integration/gdocs/: test_docs_integration.py
tests/integration/gdrive/: test_drive_integration.py
tests/integration/gsheets/: test_sheets_integration.py
tests/integration/gslides/: test_slides_integration.py
tests/packaging/: test_base_install.py  test_service_extras.py  test_wheel.py
tests/unit/: conftest.py
tests/unit/auth/: test_adc.py  test_auto_detect.py  test_credentials.py  test_oauth.py  test_scopes.py  test_service_account.py  test_token_store.py
tests/unit/core/: test_client_config.py  test_core.py  test_exceptions.py  test_googlekit_client.py  test_optional.py  test_pagination.py  test_retries.py  test_shortcut_protocol_parity.py  test_user_agent.py  test_validation.py
tests/unit/gcalendar/: test_freebusy.py  test_timezone.py
tests/unit/gdocs/: test_documents.py  test_utf16.py
tests/unit/gdrive/: conftest.py  test_changes_folders.py  test_client.py  test_files.py  test_permissions.py  test_shortcuts.py
tests/unit/gsheets/: test_formatting.py  test_spreadsheets.py  test_values.py
tests/unit/gslides/: test_presentations.py
