[project]
name = "googlekit"
version = "0.0.4"
description = "Unofficial Python SDK for Google Drive API, Google Sheets API, Google Calendar API, Google Docs API, and Google Slides API (Google Workspace)"
readme = "README.md"
license = "MIT"
authors = [
    { name = "SSujitX", email = "ssujitxx@gmail.com" }
]
keywords = [
    "google",
    "google-workspace",
    "google-drive",
    "google-drive-api",
    "google-sheets",
    "google-sheets-api",
    "google-calendar",
    "google-calendar-api",
    "google-docs",
    "google-docs-api",
    "google-slides",
    "google-slides-api",
    "google-api-python-client",
    "oauth2",
    "service-account",
    "application-default-credentials",
    "workspace",
    "spreadsheet",
    "python-sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.198.0",
    "google-auth>=2.55.2",
    "google-auth-oauthlib>=1.4.0",
    "google-auth-httplib2>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/SSujitX/GoogleKit"
Documentation = "https://ssujitx.github.io/GoogleKit/"
Repository = "https://github.com/SSujitX/GoogleKit"
Issues = "https://github.com/SSujitX/GoogleKit/issues"
Changelog = "https://github.com/SSujitX/GoogleKit/blob/main/RELEASE.md"

[project.scripts]
googlekit = "googlekit.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.7.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/googlekit"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/examples",
    "/README.md",
    "/LICENSE",
    "/RELEASE.md",
    "/SECURITY.md",
    "/CONTRIBUTING.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live Google API tests (disabled by default)",
]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["googlekit"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false